fix form alignments

--- a/src/components/auth/FormContainer.css
+++ b/src/components/auth/FormContainer.css
@@ -5,14 +5,14 @@
   align-items: center;
   padding: 33px;
   background-color: #ffffffcf;
-  margin: auto;
   border-radius: 20px;
   box-shadow: 4px 2px 40px 20px #4b4f50;
 }
 
-.form-background {
+.form-base {
+  display: grid;
+  justify-content: center;
   padding: 50px;
-  display: flex;
 }
 
 .error-container {
